namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-egress
  labels:
    name: istio-egress
    istio-injection: disabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-test
  labels:
    istio.io/rev: asm-managed
