pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: python-test-pod
  namespace: dataplattform-development
spec:
  serviceAccountName: dataplattform
  containers:
    - name: python
      image: europe-west1-docker.pkg.dev/nav-data-images-prod/docker-io/python:latest
      command: ["python"]
      args: ["-c", "import time; print('hello from python'); time.sleep(3600)"]
  restartPolicy: Never
